--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Melissa Elwing</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> 
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"></a>
+              <a class="nav-link" href="https://www.linkedin.com/in/melissa-elwing-7543b8111">linkedin</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
+
             </li>
           </ul>
         </div>
@@ -49,7 +50,7 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">Melissa Elwing</h1>
           <h2 class="masthead-subheading mb-0">Liscensed Massage Therapist</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+          <!--<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>-->
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
@@ -68,8 +69,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Massage Therapy</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">Massage</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati. </p>
             </div>
           </div>
         </div>
@@ -115,7 +116,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; Melissa Elwing 2018</p>
       </div>
       <!-- /.container -->
     </footer>
