--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Melissa Elwing</a>
+        <a class="navbar-brand" href="http://www.melissaelwing.com">Melissa Elwing</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> 
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +37,7 @@
               <a class="nav-link" href="https://www.linkedin.com/in/melissa-elwing-7543b8111">linkedin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
 
             </li>
           </ul>
@@ -48,6 +48,7 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
+          <img src="">
           <h1 class="masthead-heading mb-0">Melissa Elwing</h1>
           <h2 class="masthead-subheading mb-0">Liscensed Massage Therapist</h2>
           <!--<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>-->
