--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       <div class="masthead-content">
         <div class="container">
           <img src="">
-          <h1 class="masthead-content mb-0">Melissaelwinglmt@gmail.com</h1>
+          <h3 class="masthead-content mb-0">Melissaelwinglmt@gmail.com</h3>
           
           <!--<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>-->
         </div>
@@ -59,3 +59,18 @@
       <div class="bg-circle-3 bg-circle"></div>
       <div class="bg-circle-4 bg-circle"></div>
     </header>
+        <!-- Footer -->
+    <footer class="py-5 bg-black">
+      <div class="container">
+        <p class="m-0 text-center text-white small">Copyright &copy; Melissa Elwing 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
+</html>
