--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.melissaelwing.com">Home</a>  
 
             </li>
           </ul>
